--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,27 @@
+
+sudo: required
 language: java
 
-# 07-Sep-2017, tatu: Alas, jdk6 just doesn't work. First was missing JDK6 pkg
-#   but then Maven itself, or one of plugins, compiled with later. So... just leave
 jdk:
   - openjdk8
 
-# whitelist
-branches:
-  only:
-    - master
-    - "2.11"
+script:
+  - mvn clean compile assembly:single
+
+before_deploy:
+    - mkdir MiningBuild
+    - find . -name '*.jar' -exec cp {} ./MiningBuild \;
+    - cd /home/travis/build/build-test-conflicts/jackson-jr/MiningBuild
+    - tar -zcvf result.tar.gz *
+deploy:
+  provider: releases
+  api_key:
+    secure: $GITHUB_TOKEN
+  file: result.tar.gz
+  name: fetchjar-85a915f
+  file_glob: true
+  overwrite: true
+  skip_cleanup: true
+  on:
+    all_branches: true 
+            
